Fixed text overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,9 @@ nav ul {
 
 h1 {
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .list {
@@ -90,6 +93,9 @@ h1 {
     flex: 1;
     min-width: 0;
     font-size: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .list-item a {
